--- a/app/assets/stylesheets/spree/frontend/_mobile_navbar.sass
+++ b/app/assets/stylesheets/spree/frontend/_mobile_navbar.sass
@@ -119,15 +119,10 @@
     position: fixed
     left: 0
     top: 0
-    transition: transform .3s ease-in-out
     width: 100%
-    will-change: transform
 
     header
       margin: 0 -7.5px
-
-    &.hide-up
-      transform: translateY(-58px)
 
     .navbar-nav .open .dropdown-menu
       background: #fff
